--- a/styles.css
+++ b/styles.css
@@ -45,9 +45,75 @@ header{
 }
 .nav-link:hover{
     opacity: 0.7;
+    transform: skewX(15deg);
 }
 .nav-link-apple{
     width: 1.6rem;
     height: 4.4rem;
     background: url(images/icons/apple.svg) center no-repeat;
 }
+.nav-link-search{
+    width: 1.6rem;
+    height: 4.4rem;
+    background: url(images/icons/search.svg) center no-repeat;
+}
+.nav-link-bag{
+    width: 1.4rem;
+    height: 4.4rem;
+    background: url(images/icons/bag.svg) center no-repeat;
+}
+.iphone-11-pro{
+    background: url("images/hero/iphone-11-pro/iphone_11_pro_large.jpg");
+    margin-top: 4.4rem;
+}
+.hero{
+    height: 69.2rem;
+    background-size: auto 73.6rem;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-top: 0.6rem solid white;
+    border-bottom: 0.6rem solid white;
+}
+.iphone-11-pro{
+    border-top: none;
+}
+.title{
+    color: #fff;
+    text-align: center;
+    padding-top: 5.5rem;
+}
+.title-heading{
+    font-size: 5.6rem;
+    line-height: 1.07143;
+    letter-spacing: -.005rem;
+}
+.title-sub-heading{
+    font-size: 2.65rem;
+    margin-top: .6rem;
+    letter-spacing: .008rem;
+    font-weight: 400;
+}
+.title-price{
+    font-size: 1.7rem;
+    color: #888;
+    margin-top: .68rem;
+}
+.cta{
+    text-align: center;
+    margin-top: 1.8rem;
+}
+.cta-link{
+    color: #66bbff;
+    font-size: 2.1rem;
+    display: inline-block;
+    font-weight: 600;
+}
+.cta-link:nth-child(2){
+    margin-left: 2.6rem;
+}
+.cta-link:hover{
+    border-bottom: 2px solid #66bbff;
+    transform: scale(1.1);
+}
+
+
