--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,14 @@ header{
     color: #fff;
     text-align: center;
     padding-top: 5.5rem;
+    opacity: 0.2;
+    transition: 2s;
 }
+.title:hover{
+    opacity: 1;
+    transition: 2s;
+}
+
 .title-heading{
     font-size: 5.6rem;
     line-height: 1.07143;
@@ -114,6 +121,52 @@ header{
 .cta-link:hover{
     border-bottom: 2px solid #66bbff;
     transform: scale(1.1);
+    opacity: 0.5;
 }
+.iphone-11{
+    background: url("images/hero/iphone-11/iphone_11_large.jpg");
+    margin-top: 4.4rem;
+    opacity: 0;
+}
+.iphone-11:hover{
+    opacity: 1;
+    transition: 1s;
+}
+.title-dark{
+    color: black;
+}
+.title-dark:hover{
+    transform: scale(0.8);
+    color: rgb(82, 73, 73);
+}
+.cta-link-darker{
+    color: #0070c9;
+}
+.cta-link-darker:hover{
+    border-bottom: 2px solid #0070c9;
+    opacity: 0.5;
+    transform:scale(1.1);
+}
+.watch{
+    background: url("images/hero/watch/watch_large.jpg"); 
+}
+.title-heading-watch{
+    height: 7.8rem;
+    background: url("images/hero/watch/logo_watch_medium.png") center no-repeat;
+    background-size: auto 7.8rem;
+    margin-top:1.6rem ;
+}
+.hero{
+    height: 69.2rem;
+    background-size: auto 73.6rem;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-top: 0.6rem solid white;
+    border-bottom: 0.6rem solid white;
+}
+.iphone-11{
+    border-top: none;
+}
+
 
 
