--- a/styles.css
+++ b/styles.css
@@ -152,7 +152,7 @@ header{
 }
 .title-heading-watch{
     height: 7.8rem;
-    background: url("images/hero/watch/logo_watch_medium.png") center no-repeat;
+    background: url("images/hero/watch/logo_watch_large.png") center no-repeat;
     background-size: auto 7.8rem;
     margin-top:1.6rem ;
 }
@@ -168,5 +168,40 @@ header{
     border-top: none;
 }
 
+@media screen and (max-width:1068px){
+    .iphone-11-pro{
+        background: url("images/hero/iphone-11-pro/iphone_11_pro_medium.jpg");
+    }
+    .iphone-11{
+        background: url("images/hero/iphone-11/iphone_11_medium.jpg");
+    }
+    .watch{
+        background: url("images/hero/watch/watch_medium.jpg");
+    }
+    .hero{
+        height: 65rem;
+        background-size: auto 69.8rem;
+        background-position: bottom center;
+        background-repeat: no-repeat;
+    }
+    .title-heading1{
+        font-size: 404rem;
+    }
+    .title-sub-heading{
+        font-size: 2.4rem;
+    }
+    .cta-link:nth-child(2){
+        margin-left: 2rem;
+    }
+    .title-heading-watch{
+        height: 602rem;
+        background: url(images/hero/watch/logo_watch_medium.png) center no-repeat;
+        background-size: auto rem;
+    }
+}
+
+@media screen and (max-width:767px){
+    
+}
 
 
