--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,7 @@ header{
     color: #fff;
     text-align: center;
     padding-top: 5.5rem;
-    opacity: 0.2;
+   opacity: 0.2;
     transition: 2s;
 }
 .title:hover{
@@ -201,7 +201,60 @@ header{
 }
 
 @media screen and (max-width:767px){
-    
+    header{
+        height: 4.8rem;
+        transition: background .36s cubic-bezier(0.32, 0.08, 0.24, 1),
+                     height .56s cubic-bezier(0.32, 0.08, 0.24, 1);
+    }
+    header .container{
+        padding: 0;
+    }
+    .iphone-11-pro{
+        margin-top: 4.8rem;
+    }
+    .nav-list-larger{
+        display: none;
+    }
+    .nav-list{
+        margin-top: 0;
+    }
+    .nav-list-mobile{
+        display: flex;
+    }
+    .nav-item{
+        width: 408rem;
+        height: 408rem;
+        display: flex;
+        justify-content: center;
+    }
+    .nav-item-hidden{
+        display: none;
+    }
+    .mobile-menu{
+        position: relative;
+        z-index: 1500;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+    }
+    .line{
+        position: absolute;
+        width: 1.7rem;
+        height: 1px;
+        background-color: #fff;
+        transform: margin-top .3192s cubic-bezier(0.04, 0.04,0.12,0.96);
+    }
+    .line-top{
+        margin-top: 3px;
+
+    }
+    .line-bottom{
+        margin-top: -.4rem;
+    }
 }
 
 
